--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,16 @@ body {
   font-size: 24px;
   margin: 0px;
   padding: 0px;
-  line-height: 2em;
+  line-height: 1.75em;
+}
+
+p {
+  margin-top: 0px;
 }
 
 h1 {
   font-family: "PT Serif", serif;
+  font-size: 3rem;
   letter-spacing: 5px;
 }
 h2 {
@@ -19,16 +24,20 @@ h2 {
 h3 {
   font-family: "PT Serif", serif;
   letter-spacing: 5px;
-  font-size: 1.25em;
+  font-size: 1.75rem;
+  margin-top: 0px;
 }
-h4 {
-  font-family: "Josefin Sans", sans-serif;
-  letter-spacing: 12px;
-}
-h5,
-h6 {
+h4,
+h5 {
   font-family: "Josefin Sans", sans-serif;
   letter-spacing: 5px;
+  font-size: 0.95rem;
+}
+h6 {
+  font-family: "Josefin Sans", sans-serif;
+  letter-spacing: 10px;
+  font-size: 1.5rem;
+  margin: 0px;
 }
 
 li {
@@ -61,4 +70,9 @@ a:hover {
 }
 .nav-active:hover {
   color: #b9b9b9;
+}
+.nav-link-mobile {
+  margin-left: 0px;
+  display: block;
+  padding: 25px;
 }
