--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 body {
   font-family: "PT Serif", serif;
-  font-size: 20px;
+  font-size: 17px;
   margin: 0px;
   padding: 0px;
   line-height: 1.75em;
@@ -8,12 +8,13 @@ body {
 
 p {
   margin-top: 0px;
+  line-height: 40px;
 }
 
 h1 {
   font-family: "PT Serif", serif;
-  font-size: 3rem;
-  letter-spacing: 5px;
+  font-size: 27px;
+  font-weight: 700;
 }
 h2 {
   font-family: "Josefin Sans", sans-serif;
@@ -23,7 +24,6 @@ h2 {
 
 h3 {
   font-family: "PT Serif", serif;
-  letter-spacing: 5px;
   font-size: 1.75rem;
   margin-top: 0px;
 }
@@ -36,7 +36,7 @@ h5 {
 h6 {
   font-family: "Josefin Sans", sans-serif;
   letter-spacing: 10px;
-  font-size: 1.5rem;
+  font-size: 1rem;
   margin: 0px;
 }
 
@@ -64,7 +64,7 @@ a:hover {
   background-color: white;
   padding: 20px;
   font-size: 1.75rem;
-  letter-spacing: 5px;
+  letter-spacing: 2px;
 }
 .mobile-menu-button:hover {
   color: #61512d;
@@ -75,8 +75,10 @@ a:hover {
   color: #b9b9b9;
   text-decoration: none;
   font-family: "Josefin Sans", sans-serif;
-  margin-left: 125px;
-  letter-spacing: 5px;
+  margin-left: 100px;
+  letter-spacing: 2px;
+  font-size: 13px;
+  padding: 20px 0px 20px 20px;
 }
 .nav-link:hover {
   color: #61512d;
