--- a/src/App.css
+++ b/src/App.css
@@ -1,31 +1,34 @@
 body {
   font-family: "PT Serif", serif;
-  font-size: 17px;
+  font-size: 19px;
   margin: 0px;
   padding: 0px;
-  line-height: 1.75em;
+  line-height: 33px;
 }
 
 p {
   margin-top: 0px;
-  line-height: 40px;
 }
 
 h1 {
   font-family: "PT Serif", serif;
   font-size: 27px;
   font-weight: 700;
+  line-height: 1.4em;
 }
+
 h2 {
   font-family: "Josefin Sans", sans-serif;
-  letter-spacing: 10px;
+  letter-spacing: 5px;
   font-size: 1rem;
+  line-height: 46px;
 }
 
 h3 {
   font-family: "PT Serif", serif;
-  font-size: 1.75rem;
+  font-size: 27px;
   margin-top: 0px;
+  margin-bottom: 24px;
 }
 h4,
 h5 {
@@ -93,4 +96,5 @@ a:hover {
   margin-left: 0px;
   display: block;
   padding: 25px;
+  font-size: 1.5em;
 }
