--- a/src/App.css
+++ b/src/App.css
@@ -98,3 +98,56 @@ a:hover {
   padding: 25px;
   font-size: 1.5em;
 }
+
+.k-button {
+  width: 125px;
+  height: 50px;
+  font-family: "Josefin Sans", sans-serif;
+  letter-spacing: 5px;
+  text-transform: uppercase;
+  color: white;
+  background-color: #61512d;
+  border: none;
+}
+
+.k-button:hover {
+  background-color: white;
+  color: #61512d;
+  cursor: pointer;
+}
+
+input {
+  border: 2px solid black;
+  height: 35px;
+  font-family: "PT Serif", serif;
+  font-size: 17px;
+}
+select {
+  border: 2px solid black;
+  height: 41px;
+  width: 453px;
+  font-family: "PT Serif", serif;
+  font-size: 17px;
+}
+
+textarea {
+  border: 2px solid black;
+  height: 107px;
+  font-family: "PT Serif", serif;
+  font-size: 17px;
+  min-width: 445px;
+}
+
+.contact-container {
+  max-width: 960px;
+  margin: 0 auto;
+}
+.contact-dual-input-container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.k-mbv1 {
+  margin-bottom: 60px;
+}
