--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,18 @@
+button,
+input,
+select,
+textarea {
+  -webkit-appearance: none;
+  appearance: none;
+  font-family: inherit;
+  font-size: 100%;
+  border: 2px solid black;
+  min-height: 35px;
+  font-family: "PT Serif", serif;
+  font-size: 17px;
+  margin-bottom: 25px;
+}
+
 body {
   font-family: "PT Serif", serif;
   font-size: 19px;
@@ -119,28 +134,6 @@ a:hover {
   background-color: white;
   color: #61512d;
   cursor: pointer;
-}
-
-input {
-  border: 2px solid black;
-  height: 35px;
-  font-family: "PT Serif", serif;
-  font-size: 17px;
-}
-select {
-  border: 2px solid black;
-  height: 41px;
-  min-width: 399px;
-  font-family: "PT Serif", serif;
-  font-size: 17px;
-}
-
-textarea {
-  border: 2px solid black;
-  height: 107px;
-  font-family: "PT Serif", serif;
-  font-size: 17px;
-  min-width: 399px;
 }
 
 .contact-container {
