--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@ textarea {
   appearance: none;
   font-family: inherit;
   border: 2px solid black;
+  border-radius: 0;
   height: 35px;
   font-family: "PT Serif", serif;
   font-size: 17px;
@@ -12,6 +13,7 @@ textarea {
   width: 425px;
   box-sizing: border-box;
   padding-left: 5px;
+  background-color: white;
 }
 textarea {
   height: 200px;
@@ -208,13 +210,12 @@ a:hover {
     width: calc(100% - 10px);
   }
   .contact-container {
-    width: 400px;
+    width: 325px;
     margin: 0 auto;
   }
-
   input,
   select,
   textarea {
-    width: 400px;
+    width: 325px;
   }
 }
