more contact pushing

--- a/src/App.css
+++ b/src/App.css
@@ -14,13 +14,15 @@ textarea {
   box-sizing: border-box;
   padding-left: 5px;
   background-color: white;
+  margin-top: 5px;
 }
 textarea {
   height: 200px;
+  width: 960px;
 }
 label {
   font-family: "PT Serif", serif;
-  font-size: 17px;
+  font-size: 19px;
 }
 body {
   font-family: "PT Serif", serif;
