--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,17 +4,17 @@ textarea {
   -webkit-appearance: none;
   appearance: none;
   font-family: inherit;
-  border: 2px solid black;
+  border: 2px solid #b9b9b9;
   border-radius: 0;
-  height: 35px;
+  height: 40px;
   font-family: "PT Serif", serif;
-  font-size: 17px;
+  font-size: 19px;
   margin-bottom: 25px;
-  width: 425px;
+  width: 448px;
   box-sizing: border-box;
-  padding-left: 5px;
-  background-color: white;
-  margin-top: 5px;
+  padding-left: 10px;
+  background-color: #f3f3f3;
+  margin-top: 12px;
 }
 textarea {
   height: 200px;
@@ -112,7 +112,7 @@ a:hover {
   margin-left: 100px;
   letter-spacing: 2px;
   font-size: 13px;
-  padding: 20px 0px 20px 20px;
+  padding: 20px 0px 20px 34px;
 }
 .nav-link:hover {
   color: #61512d;
@@ -132,7 +132,7 @@ a:hover {
 
 .k-button {
   width: 100%;
-  height: 75px;
+  height: 70px;
   font-family: "Josefin Sans", sans-serif;
   letter-spacing: 10px;
   text-transform: uppercase;
