--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,7 +7,21 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.myClass {
+  text-rendering: optimizeLegibility;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+::selection {
+  background-color: #b9b9b9;
+  color: #fff;
+}
+
+::-moz-selection {
+  background-color: #b9b9b9;
+  color: #fff;
 }
