update about page, optimizelegibility

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -15,7 +15,9 @@ textarea {
   padding-left: 10px;
   background-color: #f3f3f3;
   margin-top: 12px;
+  text-rendering: optimizeLegibility;
 }
+
 textarea {
   height: 200px;
   width: 960px;
@@ -23,6 +25,7 @@ textarea {
 label {
   font-family: "PT Serif", serif;
   font-size: 19px;
+  text-rendering: optimizeLegibility;
 }
 body {
   font-family: "PT Serif", serif;
@@ -30,6 +33,7 @@ body {
   margin: 0px;
   padding: 0px;
   line-height: 33px;
+  text-rendering: optimizeLegibility;
 }
 .contact-subcontainer {
   display: flex;
@@ -45,6 +49,7 @@ h1 {
   font-size: 27px;
   font-weight: 700;
   line-height: 33px;
+  text-rendering: optimizeLegibility;
 }
 
 h2 {
@@ -52,6 +57,7 @@ h2 {
   letter-spacing: 5px;
   font-size: 1rem;
   line-height: 46px;
+  text-rendering: optimizeLegibility;
 }
 
 h3 {
@@ -59,12 +65,14 @@ h3 {
   font-size: 27px;
   margin-top: 0px;
   margin-bottom: 24px;
+  text-rendering: optimizeLegibility;
 }
 h4,
 h5 {
   font-family: "Josefin Sans", sans-serif;
   letter-spacing: 5px;
   font-size: 0.95rem;
+  text-rendering: optimizeLegibility;
 }
 h6 {
   font-family: "Josefin Sans", sans-serif;
@@ -72,6 +80,7 @@ h6 {
   letter-spacing: 5px;
   font-size: 1rem;
   margin: 0px;
+  text-rendering: optimizeLegibility;
 }
 
 li {
@@ -99,6 +108,7 @@ a:hover {
   padding: 20px;
   font-size: 1.5rem;
   letter-spacing: 2px;
+  text-rendering: optimizeLegibility;
 }
 .mobile-menu-button:hover {
   color: #61512d;
@@ -113,6 +123,7 @@ a:hover {
   letter-spacing: 2px;
   font-size: 13px;
   padding: 20px 0px 20px 33px;
+  text-rendering: optimizeLegibility;
 }
 .nav-link:hover {
   color: #61512d;
@@ -143,6 +154,7 @@ a:hover {
   font-size: 21px;
   transition: background-color 0.4s, color 0.2s;
   margin-top: -20px;
+  text-rendering: optimizeLegibility;
 }
 .k-button:disabled,
 .k-button:disabled:hover {
@@ -199,7 +211,7 @@ a:hover {
 }
 .anim-fade-in {
   animation-name: fadein;
-  animation-duration: 0.5s;
+  animation-duration: 0.8s;
   animation-fill-mode: forwards;
 }
 
@@ -221,4 +233,14 @@ a:hover {
   textarea {
     width: 325px;
   }
+}
+
+::selection {
+  background-color: #b9b9b9;
+  color: #fff;
+}
+
+::-moz-selection {
+  background-color: #b9b9b9;
+  color: #fff;
 }
