--- a/client/src/App.css
+++ b/client/src/App.css
@@ -53,8 +53,10 @@ textarea {
 }
 
 body {
-  margin-left: 441px; /* Same as the width of the sidebar */
-  /* padding: 60px; */
+  margin-left: 17.64vw; /* Same as the width of the sidebar */
+  /* 
+  margin-left: 356px;
+  padding: 60px; */
   text-rendering: optimizeLegibility;
   /*background-color: #fffcf8;*/
   background-color: black;
@@ -71,6 +73,14 @@ body {
   src: url("fonts/SpaceGrotesk-Bold.otf");
 }
 */
+.caption {
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 18px;
+  color: #1a1a1a;
+  font-weight: 400;
+  line-height: 28px;
+  text-align: center;
+}
 
 p {
   font-family: "Roboto Condensed", sans-serif;
@@ -89,9 +99,9 @@ p + h2 {
 
 h1 {
   font-family: "Roboto Condensed", sans-serif;
-  font-size: 78px;
+  font-size: 76px;
   font-weight: 700;
-  line-height: 120px;
+  line-height: 112px;
   margin: 0;
   text-align: center;
 }
@@ -137,9 +147,9 @@ a:visited {
   color: white;
   text-decoration: none;
   font-family: "Roboto Condensed", sans-serif;
-  padding-top: 60px;
-  padding-bottom: 60px;
-  font-size: 4.375rem;
+  padding-top: 2.4vw;
+  padding-bottom: 2.4vw;
+  font-size: 2.8vw;
   font-weight: 700;
   display: inline-block;
   position: relative;
@@ -170,7 +180,7 @@ a:visited {
 .nav-active {
   color: black;
   background-color: #f9b110;
-  padding: 60px 0px;
+  padding: 2.4vw 0px;
   width: 100%;
   text-align: center;
 }
@@ -342,7 +352,7 @@ a:visited {
 .centering {
   display: block;
   position: relative;
-  max-width: 1800px;
+  max-width: 1600px;
   margin: 0 auto;
   padding: 150px 50px;
 }
@@ -351,12 +361,12 @@ a:visited {
   position: relative;
   max-width: 1800px;
   margin: 0 auto;
-  padding: 250px 80px;
+  padding: 200px 100px;
 }
 .centering-footer {
   display: block;
   position: relative;
-  max-width: 1800px;
+  max-width: 1600px;
   margin: 0 auto;
   padding: 100px 50px;
 }
@@ -379,28 +389,26 @@ a:visited {
   padding-right: 150px;
 }
 
+.player-wrapper {
+  position: relative;
+  padding-top: 56.25%; /* Player ratio: 100 / (1280 / 720) */
+  margin: 0% 10%;
+}
+.react-player {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
 /*** 1600px - RESPONSIVE ***/
 @media only screen and (max-width: 1600px) {
-  body {
-    margin-left: 356px; /* Same as the width of the sidebar */
-  }
-  .nav-container {
-    max-width: 315px;
-  }
-  .logo {
-    max-width: 315px;
-  }
-  .nav-link {
-    font-size: 3.625rem;
-    padding-top: 50px;
-    padding-bottom: 50px;
-  }
-  .nav-active {
-    padding: 50px 0px;
-  }
   .services-stack {
     font-size: 1.625rem;
     line-height: 4.3125rem;
+  }
+  h1 {
+    font-size: 56px;
+    line-height: 82px;
   }
   h2 {
     font-size: 34px;
@@ -422,31 +430,6 @@ a:visited {
 
 /*** 1200px - RESPONSIVE ***/
 @media only screen and (max-width: 1200px) {
-  body {
-    margin-left: 271px; /* Same as the width of the sidebar */
-  }
-  .nav-container {
-    max-width: 230px;
-  }
-  .logo {
-    max-width: 230px;
-  }
-  .nav-link {
-    font-size: 3rem;
-    padding-top: 40px;
-    padding-bottom: 40px;
-  }
-  .nav-active {
-    padding: 40px 0px;
-  }
-  .intro-statement {
-    font-size: 60px;
-    line-height: 91px;
-  }
-  h1 {
-    font-size: 60px;
-    line-height: 72px;
-  }
   .work-flex-item h3 {
     font-size: 34px;
     line-height: 46px;
@@ -460,8 +443,7 @@ a:visited {
     max-width: 100%;
   }
   .project-flex-item {
-    flex: 100%;
-    max-width: 100%;
+    flex-basis: 100%;
   }
   .footer-flex-item.social-icons {
     padding-right: 0px;
@@ -480,7 +462,7 @@ a:visited {
     border: none;
     outline: none;
     background: none;
-    font-size: 1.6rem;
+    font-size: 23px;
   }
   .mobile-menu-button:hover {
     color: #f9b110;
@@ -496,7 +478,7 @@ a:visited {
   }
   .intro-statement {
     font-size: 34px;
-    line-height: 54px;
+    line-height: 52px;
   }
   .work-flex-item h3 {
     font-size: 24px;
@@ -522,9 +504,11 @@ a:visited {
     font-size: 50px;
     line-height: 60px;
   }
-  .project-flex-item img {
-    flex: 100%;
-    max-width: 100%;
+  /* This is correct */
+  .project-flex-item .image-block {
+    display: flex;
+    flex-basis: 100%;
+    margin: 1rem 0px;
   }
   .logo-v2 {
     /* Show -- Pen Tool Gods
@@ -550,7 +534,7 @@ a:visited {
   .nav-active {
     padding: 30px 0px;
   }
-  .social-icons {
+  .footer-flex-item {
     flex: 100%;
     max-width: 100%;
   }
