--- a/client/src/App.css
+++ b/client/src/App.css
@@ -53,7 +53,7 @@ textarea {
 }
 
 body {
-  margin-left: 17.64vw; /* Same as the width of the sidebar */
+  margin-left: 16.14vw; /* Same as the width of the sidebar */
   /* 
   margin-left: 356px;
   padding: 60px; */
@@ -76,10 +76,10 @@ body {
 .caption {
   font-family: "Roboto Condensed", sans-serif;
   font-size: 18px;
-  color: #1a1a1a;
+  color: #f9b110;
   font-weight: 400;
-  line-height: 28px;
-  text-align: center;
+  line-height: 24px;
+  text-align: left;
 }
 
 p {
@@ -91,7 +91,7 @@ p {
 }
 
 p + p {
-  margin-top: 1em;
+  margin-top: 1rem;
 }
 p + h2 {
   margin-top: 1em;
@@ -147,9 +147,9 @@ a:visited {
   color: white;
   text-decoration: none;
   font-family: "Roboto Condensed", sans-serif;
-  padding-top: 2.4vw;
-  padding-bottom: 2.4vw;
-  font-size: 2.8vw;
+  padding-top: 1.8vw;
+  padding-bottom: 1.8vw;
+  font-size: 2.4vw;
   font-weight: 700;
   display: inline-block;
   position: relative;
@@ -180,7 +180,7 @@ a:visited {
 .nav-active {
   color: black;
   background-color: #f9b110;
-  padding: 2.4vw 0px;
+  padding: 1.8vw 0px;
   width: 100%;
   text-align: center;
 }
@@ -286,8 +286,10 @@ a:visited {
   box-shadow: inset 0 -10px 0 currentColor;
   */
 }
-
 .underline {
+  border-bottom: 5px solid currentColor;
+}
+.underline-yellow {
   border-bottom: 5px solid #f9b110;
 }
 
@@ -323,6 +325,29 @@ a:visited {
   }
 }
 
+/* Fade Animation */
+.top {
+  animation-name: fade;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+  animation-duration: 1s;
+  animation-direction: alternate;
+}
+@keyframes fade {
+  0% {
+    opacity: 1;
+  }
+  25% {
+    opacity: 1;
+  }
+  75% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
 .anim-fade-in {
   animation-name: fadein;
   animation-duration: 0.5s;
@@ -352,23 +377,30 @@ a:visited {
 .centering {
   display: block;
   position: relative;
-  max-width: 1600px;
+  max-width: 1400px;
   margin: 0 auto;
   padding: 150px 50px;
 }
 .centering-work {
   display: block;
   position: relative;
-  max-width: 1800px;
+  max-width: 1400px;
   margin: 0 auto;
   padding: 200px 100px;
 }
 .centering-footer {
   display: block;
   position: relative;
-  max-width: 1600px;
+  max-width: 1400px;
   margin: 0 auto;
   padding: 100px 50px;
+}
+.centering-extra {
+  display: block;
+  position: relative;
+  max-width: 1400px;
+  margin: 0 auto;
+  padding: 400px 0px;
 }
 
 .project-notice {
@@ -380,9 +412,9 @@ a:visited {
 }
 
 .logo-v2 {
-  width: 200px;
+  width: 160px;
   height: auto;
-  padding-top: 50px;
+  padding-top: 25px;
 }
 
 .footer-flex-item.social-icons {
@@ -392,12 +424,20 @@ a:visited {
 .player-wrapper {
   position: relative;
   padding-top: 56.25%; /* Player ratio: 100 / (1280 / 720) */
-  margin: 0% 10%;
 }
 .react-player {
   position: absolute;
   top: 0;
   left: 0;
+}
+
+.intro-statement {
+  font-size: 60px;
+  line-height: 98px;
+}
+
+span.line {
+  display: inline-block;
 }
 
 /*** 1600px - RESPONSIVE ***/
@@ -442,11 +482,12 @@ a:visited {
     flex: 100%;
     max-width: 100%;
   }
-  .project-flex-item {
-    flex-basis: 100%;
-  }
   .footer-flex-item.social-icons {
     padding-right: 0px;
+  }
+  .caption {
+    font-size: 12px;
+    line-height: 16px;
   }
 }
 
@@ -504,7 +545,12 @@ a:visited {
     font-size: 50px;
     line-height: 60px;
   }
-  /* This is correct */
+  /* Text Flex */
+  .project-flex-item {
+    max-width: 100%;
+    flex-basis: 100%;
+  }
+  /* Images Flex */
   .project-flex-item .image-block {
     display: flex;
     flex-basis: 100%;
@@ -522,7 +568,23 @@ a:visited {
 }
 
 /*** 600px - RESPONSIVE ***/
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 650px), screen and (max-height: 600px) {
+  body {
+    margin-left: 0px; /* Same as the width of the sidebar */
+  }
+  .mobile-menu-button {
+    color: #1a1a1a;
+    text-decoration: none;
+    font-family: "Roboto Condensed", sans-serif;
+    border: none;
+    outline: none;
+    background: none;
+    font-size: 23px;
+  }
+  .mobile-menu-button:hover {
+    color: #f9b110;
+    cursor: pointer;
+  }
   .logo {
     max-width: 150px;
   }
