--- a/client/src/App.css
+++ b/client/src/App.css
@@ -442,23 +442,56 @@ span.line {
 
 /* -- PAGE ANIMATION - START -- */
 .page-anim {
-  -webkit-animation: transitionIn 0.75s; /* Safari 4+ */
-  -moz-animation: transitionIn 0.75s; /* Fx 5+ */
-  -o-animation: transitionIn 0.75s; /* Opera 12+ */
-  animation: transitionIn 0.75s; /* IE 10+, Fx 29+ */
+  -webkit-animation: fadeIn 1.75s; /* Safari 4+ */
+  -moz-animation: fadeIn 1.75s; /* Fx 5+ */
+  -o-animation: fadeIn 1.75s; /* Opera 12+ */
+  animation: fadeIn 1.75s; /* IE 10+, Fx 29+ */
   animation-timing-function: ease-in-out;
 }
+
+@-webkit-keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@-moz-keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@-o-keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
 .menu-anim {
-  -webkit-animation: transitionIn 0.25s; /* Safari 4+ */
-  -moz-animation: transitionIn 0.25s; /* Fx 5+ */
-  -o-animation: transitionIn 0.25s; /* Opera 12+ */
-  animation: transitionIn 0.25s; /* IE 10+, Fx 29+ */
+  -webkit-animation: transitionIn 0.3s; /* Safari 4+ */
+  -moz-animation: transitionIn 0.3s; /* Fx 5+ */
+  -o-animation: transitionIn 0.3s; /* Opera 12+ */
+  animation: transitionIn 0.3s; /* IE 10+, Fx 29+ */
   animation-timing-function: ease-in-out;
 }
 @-webkit-keyframes transitionIn {
   from {
     opacity: 0;
-    transform: translateY(-10px);
+    transform: translateY(-25px);
   }
   to {
     opacity: 1;
@@ -468,7 +501,7 @@ span.line {
 @-moz-keyframes transitionIn {
   from {
     opacity: 0;
-    transform: translateY(-10px);
+    transform: translateY(-25px);
   }
   to {
     opacity: 1;
@@ -478,7 +511,7 @@ span.line {
 @-o-keyframes transitionIn {
   from {
     opacity: 0;
-    transform: translateY(-10px);
+    transform: translateY(-25px);
   }
   to {
     opacity: 1;
@@ -488,7 +521,7 @@ span.line {
 @keyframes transitionIn {
   from {
     opacity: 0;
-    transform: translateY(-10px);
+    transform: translateY(-25px);
   }
   to {
     opacity: 1;
